# trex

./: Cargo.toml  README.md  REQUIREMENTS.md  REVIEWS.md
data/input/: disputes.csv  duplicate_tx_ids.csv  edge_cases.csv  full_flow_large.csv  multi_client.csv  spec_violations.csv  whitespace.csv
data/output/: basic_output.csv  basic_transaction_log.csv
src/: lib.rs  main.rs
src/ledger/: account.rs  engine.rs  mod.rs  transaction.rs
src/processing/: consumer.rs  producer.rs
