[package]
name = "trex"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "trex"

[[bin]]
name = "trex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
log = "0.4"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3.23.0"
